// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Heading component using <Text> component properties 1`] = `
<h3
  className="kJDkXl"
  fontFamily="halyard-display"
  fontSize={4}
/>
`;

exports[`Heading Heading component with default theme font size, when "fontSize" prop not used 1`] = `
<h3
  className="jaeOUv"
  fontFamily="halyard-display"
  fontSize={4}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 1`] = `
<h1
  className="dbwvKd"
  fontFamily="halyard-display"
  fontSize={6}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 2`] = `
<h2
  className="bHwqdi"
  fontFamily="halyard-display"
  fontSize={5}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 3`] = `
<h3
  className="fBUMpS"
  fontFamily="halyard-display"
  fontSize={4}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 4`] = `
<h4
  className="QlgPb"
  fontFamily="halyard-display"
  fontSize={3}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 5`] = `
<h5
  className="dKnfyI"
  fontFamily="halyard-display"
  fontSize={2}
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 6`] = `
<h6
  className="cQpbWn"
  fontFamily="halyard-display"
  fontSize={0}
/>
`;

exports[`Heading renders 1`] = `
<h3
  className="jaeOUv"
  fontFamily="halyard-display"
  fontSize={4}
/>
`;
